// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMaps expect render correctly with the map rendered 1`] = `
<div
  className="geo"
>
  <div
    className="geo map"
  />
</div>
`;

exports[`GoogleMaps expect render correctly with the map rendered 2`] = `
<div
  className="geo"
>
  <div
    className="geo map"
  />
  <div>
    This is the children
  </div>
</div>
`;

exports[`GoogleMaps expect render correctly without the map rendered 1`] = `
<div
  className="geo"
>
  <div
    className="geo map"
  />
</div>
`;
